# com.hrrm.famoney.application.api.accounts/src/main/java/com/hrrm/famoney/api/accounts/resource/internal/AccountsApiImpl.java
@@ -2,7 +2,9 @@ package com.hrrm.famoney.api.accounts.resource.internal;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import javax.validation.constraints.NotNull;
 
@@ -14,11 +16,16 @@ import org.osgi.service.jaxrs.whiteboard.propertytypes.JaxrsApplicationSelect;
 import org.osgi.service.jaxrs.whiteboard.propertytypes.JaxrsResource;
 import org.osgi.service.log.Logger;
 import org.osgi.service.log.LoggerFactory;
+import org.osgi.service.transaction.control.TransactionControl;
 
+import com.google.common.base.Predicate;
+import com.google.common.base.Predicates;
+import com.google.common.collect.Sets;
 import com.hrrm.famoney.api.accounts.dto.AccountDTO;
 import com.hrrm.famoney.api.accounts.dto.AccountMovementDTO;
 import com.hrrm.famoney.api.accounts.dto.mapper.AccountEntityToDTOMapper;
 import com.hrrm.famoney.api.accounts.resource.AccountsApi;
+import com.hrrm.famoney.domain.accounts.Account;
 import com.hrrm.famoney.domain.accounts.repository.AccountRepository;
 
 import io.swagger.v3.oas.annotations.Hidden;
@@ -33,28 +40,37 @@ public class AccountsApiImpl implements AccountsApi {
     private Logger logger;
     private AccountRepository accountRepository;
     private AccountEntityToDTOMapper accountEntityToDTOMapper;
+    private TransactionControl txControl;
 
     @Activate
     public AccountsApiImpl(@Reference(service = LoggerFactory.class) Logger logger,
             @Reference AccountRepository accountRepository,
-            @Reference AccountEntityToDTOMapper accountEntityToDTOMapper) {
+            @Reference AccountEntityToDTOMapper accountEntityToDTOMapper, @Reference TransactionControl txControl) {
         super();
         this.logger = logger;
         this.accountRepository = accountRepository;
         this.accountEntityToDTOMapper = accountEntityToDTOMapper;
+        this.txControl = txControl;
     }
 
     @Override
     @Operation
-    public List<AccountDTO> getAllAccounts() {
+    public List<AccountDTO> getAllAccounts(Set<String> tags) {
         logger.debug("Getting all accounts.");
-        List<AccountDTO> result = accountRepository.findAll()
-            .stream()
-            .map(accountEntityToDTOMapper::toDTO)
-            .collect(Collectors.toList());
-        logger.debug("Got accounts.");
-        logger.trace("Got {} accounts.", result.size());
-        return result;
+        Predicate<Account> tagFilterCondition = (tags == null || tags.isEmpty()) ? Predicates.alwaysTrue()
+                : account -> !Sets.intersection(account.getTags(), tags)
+                    .isEmpty();
+        return txControl.requiresNew(() -> {
+            Stream<Account> accountsStream = accountRepository.findAll()
+                .stream()
+                .filter(tagFilterCondition);
+
+            List<AccountDTO> result = accountsStream.map(accountEntityToDTOMapper::toDTO)
+                .collect(Collectors.toList());
+            logger.debug("Got accounts.");
+            logger.trace("Got {} accounts.", result.size());
+            return result;
+        });
     }
 
     @Override
@@ -63,7 +79,8 @@ public class AccountsApiImpl implements AccountsApi {
     }
 
     @Override
-    public List<AccountMovementDTO> getAccountMovements(@NotNull Integer accountId, String continueToken, Integer count) {
+    public List<AccountMovementDTO> getAccountMovements(@NotNull Integer accountId, String continueToken,
+            Integer count) {
         logger.debug("Getting all account movemnts.");
         logger.trace("Getting all movemnts of account with ID: {}", accountId);
         List<AccountMovementDTO> accountMovements = Collections.emptyList();
