# com.hrrm.famoney.application.api.accounts/src/main/resources/openapi.json
@@ -1,18 +1,38 @@
 {
   "openapi" : "3.0.1",
-  "info" : {
-    "title" : "Accounts",
-    "version" : "1.0.0"
-  },
-  "servers" : [ {
-    "url" : "/api/accounts",
-    "variables" : { }
-  } ],
-  "tags" : [ {
-    "name" : "accounts",
-    "description" : "Accounts related requests"
-  } ],
   "paths" : {
+    "/accounts" : {
+      "get" : {
+        "tags" : [ "accounts" ],
+        "operationId" : "getAllAccounts",
+        "parameters" : [ {
+          "name" : "tags",
+          "in" : "query",
+          "schema" : {
+            "uniqueItems" : true,
+            "type" : "array",
+            "items" : {
+              "type" : "string"
+            }
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "A list of all accounts",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "array",
+                  "items" : {
+                    "$ref" : "#/components/schemas/Account"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/accounts/tags" : {
       "get" : {
         "tags" : [ "accounts" ],
@@ -76,31 +96,29 @@
           }
         }
       }
-    },
-    "/accounts" : {
-      "get" : {
-        "tags" : [ "accounts" ],
-        "operationId" : "getAllAccounts",
-        "responses" : {
-          "200" : {
-            "description" : "A list of all accounts",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "type" : "array",
-                  "items" : {
-                    "$ref" : "#/components/schemas/Account"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
     }
   },
   "components" : {
     "schemas" : {
+      "Account" : {
+        "required" : [ "name" ],
+        "type" : "object",
+        "properties" : {
+          "id" : {
+            "type" : "integer",
+            "format" : "int32"
+          },
+          "name" : {
+            "type" : "string"
+          },
+          "tags" : {
+            "type" : "array",
+            "items" : {
+              "type" : "string"
+            }
+          }
+        }
+      },
       "AccountMovement" : {
         "type" : "object",
         "properties" : {
@@ -118,24 +136,6 @@
           "amount" : {
             "type" : "number",
             "format" : "double"
-          }
-        }
-      },
-      "Account" : {
-        "type" : "object",
-        "properties" : {
-          "id" : {
-            "type" : "integer",
-            "format" : "int32"
-          },
-          "name" : {
-            "type" : "string"
-          },
-          "tags" : {
-            "type" : "array",
-            "items" : {
-              "type" : "string"
-            }
           }
         }
       }
